--- a/style.css
+++ b/style.css
@@ -1,17 +1,14 @@
 #main-body{
     
-    background-image:linear-gradient(0deg,#000,transparent 40%,transparent),url('/me.jpg');
-    
+    background-image:linear-gradient(0deg,#000,transparent 50%),url('/me.jpg');
     background-position: -150px -90px;
     background-size:contain;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-color: black;
     
 }
 
 #nav-bar{
-    position: relative;
     width: 1155;
     font-size: 17px;
     margin-right: 20px;
