--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #main-body{
     
-    background-image:linear-gradient(0deg,#000,transparent 50%),url('/me.jpg');
-    background-position: -150px -90px;
+    background-image:linear-gradient(0deg,#000,transparent 20%),url('/me.jpg');
+    background-position:  -120px;
     background-size:contain;
     background-repeat: no-repeat;
     background-color: black;
@@ -39,4 +39,24 @@
     text-align: right; 
     float: right; 
     font-style:normal;
+}
+
+#hi-font{
+    color: white;
+    font-weight: 100;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 45;
+    position: relative;
+    left: 500;
+    top: 120;
+}   
+
+#profession-font{
+    color: white;
+    font-weight: 800;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 75;
+    position: relative;
+    left: 500;
+    top: 120;
 }
