--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
 
-/*
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -1809,7 +1804,7 @@ input, select, textarea {
 
 	@media screen and (max-width: 980px) {
 
-		header br {
+		header  {
 			display: none;
 		}
 
@@ -2763,7 +2758,7 @@ input, select, textarea {
 				display: block;
 			}
 
-				.spotlight br {
+				.spotlight {
 					display: none;
 				}
 
